@@ -1,5 +1,10 @@
 2007-04-10  Jorn Baayen  <jorn@openedhand.com>
 
+	* matchbox-panel/mb-panel.c: (main):
+	Replace alignment with frame for padding.
+
+2007-04-10  Jorn Baayen  <jorn@openedhand.com>
+
 	* matchbox-panel/mb-panel.c: (load_applet), (main):
 	Fix indent.
 
